src/parser/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.4 from src/parser/Grammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseSpecFromTokenStream -> Formulae        (0)
	Formulae -> Formula ';' Formulae                   (1)
	Formulae -> Formula ';'                            (2)
	Formulae -> Formula                                (3)
	Formula -> Formula '&&' Formula                    (4)
	Formula -> Formula '||' Formula                    (5)
	Formula -> Formula '->' Formula                    (6)
	Formula -> Formula '==' Formula                    (7)
	Formula -> Formula '!=' Formula                    (8)
	Formula -> '!' Formula                             (9)
	Formula -> '(' Formula ')'                         (10)
	Formula -> 'A' PFormula                            (11)
	Formula -> 'E' PFormula                            (12)
	Formula -> 'var'                                   (13)
	Formula -> 'true'                                  (14)
	Formula -> 'false'                                 (15)
	PFormula -> Formula 'U' Formula                    (16)
	PFormula -> Formula 'W' Formula                    (17)
	PFormula -> 'X' Formula                            (18)
	PFormula -> 'G' Formula                            (19)
	PFormula -> 'F' Formula                            (20)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'true'         { TokenTrue }
	'false'        { TokenFalse }
	'!'            { TokenNot }
	'&&'           { TokenAnd }
	'||'           { TokenOr }
	'->'           { TokenImplies }
	'=='           { TokenIff }
	'!='           { TokenXor }
	'E'            { TokenExists }
	'A'            { TokenAll }
	'X'            { TokenNext }
	'F'            { TokenFuture }
	'G'            { TokenGlobally }
	'U'            { TokenUntil }
	'W'            { TokenWUntil }
	'('            { TokenLParen }
	')'            { TokenRParen }
	';'            { TokenSemi }
	'var'          { TokenVar $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseSpecFromTokenStream rule  0
	Formulae        rules 1, 2, 3
	Formula         rules 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15
	PFormula        rules 16, 17, 18, 19, 20

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formulae       goto state 10
	Formula        goto state 11

State 1


	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 2

State 2

	Formulae -> Formula . ';' Formulae                  (rule 1)
	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           shift, and enter state 14
	'=='           shift, and enter state 15
	'!='           shift, and enter state 16
	';'            shift, and enter state 26


State 3

	Formula -> 'true' .                                 (rule 14)

	'&&'           reduce using rule 14
	'||'           reduce using rule 14
	'->'           reduce using rule 14
	'=='           reduce using rule 14
	'!='           reduce using rule 14
	'U'            reduce using rule 14
	'W'            reduce using rule 14
	')'            reduce using rule 14
	';'            reduce using rule 14
	%eof           reduce using rule 14


State 4

	Formula -> 'false' .                                (rule 15)

	'&&'           reduce using rule 15
	'||'           reduce using rule 15
	'->'           reduce using rule 15
	'=='           reduce using rule 15
	'!='           reduce using rule 15
	'U'            reduce using rule 15
	'W'            reduce using rule 15
	')'            reduce using rule 15
	';'            reduce using rule 15
	%eof           reduce using rule 15


State 5

	Formula -> '!' . Formula                            (rule 9)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 25

State 6

	Formula -> 'E' . PFormula                           (rule 12)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'X'            shift, and enter state 21
	'F'            shift, and enter state 22
	'G'            shift, and enter state 23
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 19
	PFormula       goto state 24

State 7

	Formula -> 'A' . PFormula                           (rule 11)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'X'            shift, and enter state 21
	'F'            shift, and enter state 22
	'G'            shift, and enter state 23
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 19
	PFormula       goto state 20

State 8

	Formula -> '(' . Formula ')'                        (rule 10)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 18

State 9

	Formula -> 'var' .                                  (rule 13)

	'&&'           reduce using rule 13
	'||'           reduce using rule 13
	'->'           reduce using rule 13
	'=='           reduce using rule 13
	'!='           reduce using rule 13
	'U'            reduce using rule 13
	'W'            reduce using rule 13
	')'            reduce using rule 13
	';'            reduce using rule 13
	%eof           reduce using rule 13


State 10

	%start_parseSpecFromTokenStream -> Formulae .       (rule 0)

	%eof           accept


State 11

	Formulae -> Formula . ';' Formulae                  (rule 1)
	Formulae -> Formula . ';'                           (rule 2)
	Formulae -> Formula .                               (rule 3)
	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           shift, and enter state 14
	'=='           shift, and enter state 15
	'!='           shift, and enter state 16
	';'            shift, and enter state 17
	%eof           reduce using rule 3


State 12

	Formula -> Formula '&&' . Formula                   (rule 4)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 38

State 13

	Formula -> Formula '||' . Formula                   (rule 5)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 37

State 14

	Formula -> Formula '->' . Formula                   (rule 6)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 36

State 15

	Formula -> Formula '==' . Formula                   (rule 7)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 35

State 16

	Formula -> Formula '!=' . Formula                   (rule 8)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 34

State 17

	Formulae -> Formula ';' . Formulae                  (rule 1)
	Formulae -> Formula ';' .                           (rule 2)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9
	%eof           reduce using rule 2

	Formulae       goto state 27
	Formula        goto state 11

State 18

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)
	Formula -> '(' Formula . ')'                        (rule 10)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           shift, and enter state 14
	'=='           shift, and enter state 15
	'!='           shift, and enter state 16
	')'            shift, and enter state 33


State 19

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)
	PFormula -> Formula . 'U' Formula                   (rule 16)
	PFormula -> Formula . 'W' Formula                   (rule 17)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           shift, and enter state 14
	'=='           shift, and enter state 15
	'!='           shift, and enter state 16
	'U'            shift, and enter state 31
	'W'            shift, and enter state 32


State 20

	Formula -> 'A' PFormula .                           (rule 11)

	'&&'           reduce using rule 11
	'||'           reduce using rule 11
	'->'           reduce using rule 11
	'=='           reduce using rule 11
	'!='           reduce using rule 11
	'U'            reduce using rule 11
	'W'            reduce using rule 11
	')'            reduce using rule 11
	';'            reduce using rule 11
	%eof           reduce using rule 11


State 21

	PFormula -> 'X' . Formula                           (rule 18)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 30

State 22

	PFormula -> 'F' . Formula                           (rule 20)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 29

State 23

	PFormula -> 'G' . Formula                           (rule 19)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 28

State 24

	Formula -> 'E' PFormula .                           (rule 12)

	'&&'           reduce using rule 12
	'||'           reduce using rule 12
	'->'           reduce using rule 12
	'=='           reduce using rule 12
	'!='           reduce using rule 12
	'U'            reduce using rule 12
	'W'            reduce using rule 12
	')'            reduce using rule 12
	';'            reduce using rule 12
	%eof           reduce using rule 12


State 25

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)
	Formula -> '!' Formula .                            (rule 9)

	'&&'           reduce using rule 9
	'||'           reduce using rule 9
	'->'           reduce using rule 9
	'=='           reduce using rule 9
	'!='           reduce using rule 9
	'U'            reduce using rule 9
	'W'            reduce using rule 9
	')'            reduce using rule 9
	';'            reduce using rule 9
	%eof           reduce using rule 9


State 26

	Formulae -> Formula ';' . Formulae                  (rule 1)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formulae       goto state 27
	Formula        goto state 11

State 27

	Formulae -> Formula ';' Formulae .                  (rule 1)

	%eof           reduce using rule 1


State 28

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)
	PFormula -> 'G' Formula .                           (rule 19)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           shift, and enter state 14
	'=='           shift, and enter state 15
	'!='           shift, and enter state 16
	'U'            reduce using rule 19
	'W'            reduce using rule 19
	')'            reduce using rule 19
	';'            reduce using rule 19
	%eof           reduce using rule 19


State 29

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)
	PFormula -> 'F' Formula .                           (rule 20)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           shift, and enter state 14
	'=='           shift, and enter state 15
	'!='           shift, and enter state 16
	'U'            reduce using rule 20
	'W'            reduce using rule 20
	')'            reduce using rule 20
	';'            reduce using rule 20
	%eof           reduce using rule 20


State 30

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)
	PFormula -> 'X' Formula .                           (rule 18)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           shift, and enter state 14
	'=='           shift, and enter state 15
	'!='           shift, and enter state 16
	'U'            reduce using rule 18
	'W'            reduce using rule 18
	')'            reduce using rule 18
	';'            reduce using rule 18
	%eof           reduce using rule 18


State 31

	PFormula -> Formula 'U' . Formula                   (rule 16)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 40

State 32

	PFormula -> Formula 'W' . Formula                   (rule 17)

	'true'         shift, and enter state 3
	'false'        shift, and enter state 4
	'!'            shift, and enter state 5
	'E'            shift, and enter state 6
	'A'            shift, and enter state 7
	'('            shift, and enter state 8
	'var'          shift, and enter state 9

	Formula        goto state 39

State 33

	Formula -> '(' Formula ')' .                        (rule 10)

	'&&'           reduce using rule 10
	'||'           reduce using rule 10
	'->'           reduce using rule 10
	'=='           reduce using rule 10
	'!='           reduce using rule 10
	'U'            reduce using rule 10
	'W'            reduce using rule 10
	')'            reduce using rule 10
	';'            reduce using rule 10
	%eof           reduce using rule 10


State 34

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)
	Formula -> Formula '!=' Formula .                   (rule 8)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           reduce using rule 8
	'=='           reduce using rule 8
	'!='           reduce using rule 8
	'U'            reduce using rule 8
	'W'            reduce using rule 8
	')'            reduce using rule 8
	';'            reduce using rule 8
	%eof           reduce using rule 8


State 35

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula '==' Formula .                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           reduce using rule 7
	'=='           reduce using rule 7
	'!='           reduce using rule 7
	'U'            reduce using rule 7
	'W'            reduce using rule 7
	')'            reduce using rule 7
	';'            reduce using rule 7
	%eof           reduce using rule 7


State 36

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula '->' Formula .                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           reduce using rule 6
	'=='           reduce using rule 6
	'!='           reduce using rule 6
	'U'            reduce using rule 6
	'W'            reduce using rule 6
	')'            reduce using rule 6
	';'            reduce using rule 6
	%eof           reduce using rule 6


State 37

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula '||' Formula .                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)

	'&&'           reduce using rule 5
	'||'           reduce using rule 5
	'->'           reduce using rule 5
	'=='           reduce using rule 5
	'!='           reduce using rule 5
	'U'            reduce using rule 5
	'W'            reduce using rule 5
	')'            reduce using rule 5
	';'            reduce using rule 5
	%eof           reduce using rule 5


State 38

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula '&&' Formula .                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)

	'&&'           reduce using rule 4
	'||'           reduce using rule 4
	'->'           reduce using rule 4
	'=='           reduce using rule 4
	'!='           reduce using rule 4
	'U'            reduce using rule 4
	'W'            reduce using rule 4
	')'            reduce using rule 4
	';'            reduce using rule 4
	%eof           reduce using rule 4


State 39

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)
	PFormula -> Formula 'W' Formula .                   (rule 17)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           shift, and enter state 14
	'=='           shift, and enter state 15
	'!='           shift, and enter state 16
	'U'            reduce using rule 17
	'W'            reduce using rule 17
	')'            reduce using rule 17
	';'            reduce using rule 17
	%eof           reduce using rule 17


State 40

	Formula -> Formula . '&&' Formula                   (rule 4)
	Formula -> Formula . '||' Formula                   (rule 5)
	Formula -> Formula . '->' Formula                   (rule 6)
	Formula -> Formula . '==' Formula                   (rule 7)
	Formula -> Formula . '!=' Formula                   (rule 8)
	PFormula -> Formula 'U' Formula .                   (rule 16)

	'&&'           shift, and enter state 12
	'||'           shift, and enter state 13
	'->'           shift, and enter state 14
	'=='           shift, and enter state 15
	'!='           shift, and enter state 16
	'U'            reduce using rule 16
	'W'            reduce using rule 16
	')'            reduce using rule 16
	';'            reduce using rule 16
	%eof           reduce using rule 16


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 21
Number of terminals: 19
Number of non-terminals: 4
Number of states: 41
